Fixed pixel shift in card rate

--- a/Junior/Social-Media-Dashboard-With-Theme-Switcher/css/style.css
+++ b/Junior/Social-Media-Dashboard-With-Theme-Switcher/css/style.css
@@ -192,6 +192,7 @@ header {
 .bottom__card > * {
   opacity: 0;
   animation: 1s fadeIn forwards;
+  will-change: transform;
 }
 
 .top__card > * {
